Fixes #20 so sidebar doesn't disappear on mobile site

--- a/client/app/lessons/lessons.css
+++ b/client/app/lessons/lessons.css
@@ -44,24 +44,24 @@ body {
  */
 
 /* Hide for mobile, show later */
-.sidebar {
+/*.sidebar {
   display: none;
+}*/
+/*@media (min-width: 768px) { */
+.sidebar {
+  position: fixed;
+  top: 51px;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  display: block;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+  background-color: #f5f5f5;
+  border-right: 1px solid #eee;
 }
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-  }
-}
+/*}*/
 
 /* Sidebar navigation */
 .nav-sidebar {
